[package]
name = "disle"
version = "1.1.1"
authors = ["Geobert Quach <geobert@protonmail.com>"]
edition = "2018"
description = "A Discord dice roller bot with alias management"
keywords = ["dice", "roll", "RPG", "discord", "bot"]
categories = ["games"]
repository = "https://github.com/Geobert/disle"
license = "MIT"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.2", features = ["macros", "signal", "rt-multi-thread"] }
caith = { version = "4.1.1", features = ["ova", "cde", "cards"] }
# caith = { path = "../caith", features = ["ova", "cde", "cards"] }
ron = "0.6.4"
serde = { version = "1.0.119", features = ["serde_derive"] }
futures = "0.3.12"

[dependencies.serenity] 
version = "0.10.2"
optional = true

[features]
default = ["discord", "cards"]
discord = ["serenity"]
cards = []
